# dos2-board-game-insert

./: .envrc  .gitattributes  .gitignore  Makefile  assembly_acts.scad  assembly_items.scad  card_box.scad  colors.scad  dos2-board-game.sublime-project  location_box.scad  logconfig.py  pyproject.toml  std_box_vars.scad  utils.scad  watch.py
.claude/: CLAUDE.md
data/: acts.yaml  boxes.yaml
docs/: card-box-groupings.md  card-inventory.md  linting.md  location-box-groupings.md  location-decks.md
openscad/: assembly_items.scad  constants.scad  gamebox.scad  lid.scad
src/: acts.yaml  boxes.yaml  cardboard.py  gamebox.py  item_box.py  location_box.py  parts.py  status.py  utils.py
